# demo-vector-search

./: README.md
pinecone/: db.py  embed.py  embedding.py  main.py  pyproject.toml  util.py
pinecone/util/: csv.py
